# agile_autonomy

./: .gitignore  README.md  dependencies.yaml
data_generation/: .clang-format  README.md
data_generation/agile_autonomy/: CMakeLists.txt  package.xml
data_generation/agile_autonomy/include/agile_autonomy/: agile_autonomy.h  flightmare_bridge.h
data_generation/agile_autonomy/include/sgm_gpu/: configuration.h  cost_aggregation.h  costs.h  hamming_cost.h  left_right_consistency.h  median_filter.h  sgm_gpu.h  util.h
data_generation/agile_autonomy/launch/: controller.launch  quadrotor_simulation.launch  rpg_mpc.launch  simulation.launch
data_generation/agile_autonomy/parameters/: default.yaml  default.yaml.orig  flightmare.yaml  mpc_params.yaml
data_generation/agile_autonomy/resources/rviz/: simulation.rviz
data_generation/agile_autonomy/resources/urdf/: component_snippets.xacro  hummingbird.xacro  hummingbird_base.xacro  mav_generic_odometry_sensor_rgb.gazebo
data_generation/agile_autonomy/resources/worlds/: simple.world
data_generation/agile_autonomy/src/: agile_autonomy.cpp  flightmare_bridge.cpp
data_generation/agile_autonomy/src/sgm_gpu/: costs.cu  hamming_cost.cu  left_right_consistency.cu  median_filter.cu  sgm_gpu.cu  sgm_gpu_node.cpp  sgm_gpu_node_main.cpp
data_generation/agile_autonomy_msgs/: CMakeLists.txt  package.xml
data_generation/agile_autonomy_msgs/msg/: MultiPolyCoeff.msg  MultiTrajectory.msg  PolyCoeff.msg
data_generation/agile_autonomy_utils/: .gitignore  CMakeLists.txt  package.xml
data_generation/agile_autonomy_utils/include/agile_autonomy_utils/: generate_reference.h  logging.h  spline.h  trajectory_ext.h  visualize.h
data_generation/agile_autonomy_utils/src/: logging.cpp  trajectory_ext.cpp  visualize.cpp
data_generation/expert_planner/parameters/: default.yaml.orig  flightmare.yaml.orig
data_generation/expert_planner/src/: expert_planner.cpp.orig
data_generation/mppi/parameters/: label_generation.yaml.orig
data_generation/rpg_flightmare/: .gitignore  README.md
data_generation/rpg_flightmare/example_vision/: CMakeLists.txt  package.xml
data_generation/rpg_flightmare/example_vision/launch/: camera_control.launch
data_generation/rpg_flightmare/example_vision/src/: camera_control.cpp
data_generation/traj_sampler/: CMakeLists.txt  README.md  dependencies.yaml  package.xml
data_generation/traj_sampler/include/traj_sampler/: generate_label.h  kdtree.h  printing_utils.hpp  timing.hpp  traj_sampler.h
data_generation/traj_sampler/launch/: generate_label.launch  generate_label_12.launch  generate_label_4.launch  generate_label_8.launch
data_generation/traj_sampler/parameters/: label_generation.yaml  mpc_params.yaml
data_generation/traj_sampler/resources/rviz/: mppi.rviz
data_generation/traj_sampler/src/: example-utils.hpp  generate_label.cpp  kdtree.cpp  tinyply.cpp  tinyply.h  traj_sampler.cpp
data_generation/viz_utils/: .gitignore  visualize_trajectories.py  visualize_trajectories_old.py
data_generation/viz_utils/pole_avoidance/: odometry.csv  pointcloud-unity_muted.ply  reference_trajectory.csv
data_generation/viz_utils/pole_avoidance/trajectories/: trajectories_bf_00000000.csv  trajectories_bf_00000000.npy  trajectories_bf_00000001.csv  trajectories_bf_00000001.npy  trajectories_bf_00000002.csv  trajectories_bf_00000002.npy  trajectories_bf_00000003.csv  trajectories_bf_00000003.npy  trajectories_bf_00000004.csv  trajectories_bf_00000004.npy  trajectories_bf_00000005.csv  trajectories_bf_00000005.npy  trajectories_bf_00000006.csv  trajectories_bf_00000006.npy  trajectories_bf_00000007.csv  trajectories_bf_00000007.npy  trajectories_bf_00000008.csv  trajectories_bf_00000008.npy  trajectories_bf_00000009.csv  trajectories_bf_00000009.npy  trajectories_bf_00000010.csv  trajectories_bf_00000010.npy  trajectories_bf_00000011.csv  trajectories_bf_00000011.npy  trajectories_bf_00000012.csv  trajectories_bf_00000012.npy  trajectories_bf_00000013.csv  trajectories_bf_00000013.npy  trajectories_bf_00000014.csv  trajectories_bf_00000014.npy  trajectories_bf_00000015.csv  trajectories_bf_00000015.npy  trajectories_bf_00000016.csv  trajectories_bf_00000016.npy  trajectories_bf_00000017.csv  trajectories_bf_00000017.npy  trajectories_bf_00000018.csv  trajectories_bf_00000018.npy  trajectories_bf_00000019.csv  trajectories_bf_00000019.npy  (+524 more)
logging_utils/: print_avg_metrics_poles.py
planner_learning/: .gitignore  CMakeLists.txt  collect_train.zsh  common.py  dagger_training.py  open_loop_test.py  package.xml  setup.py  test_trajectories.py  train.py
planner_learning/config/: dagger_settings.yaml  deploy_settings.yaml  openloop_settings.yaml  settings.py  test_settings.yaml  train_settings.yaml
planner_learning/models/: ckpt-50.data-00000-of-00002  ckpt-50.index
planner_learning/src/PlannerLearning/: PlannerBase.py  PlannerLearning.py
planner_learning/src/PlannerLearning/models/: data_loader.py  geometry.py  nets.py  nets.py?token=ACUQOKNY2KJCUEPNRV2HOY27WOLGC  plan_learner.py  pose.py  utils.py
