<?xml version="1.0"?>
<package format="2">
  <name>agile_autonomy_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for agile autonomy project.</description>

  <maintainer email="ekaufmann@ifi.uzh.ch">Elia Kaufmann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>std_msgs</depend>
</package>
